Added logic about get balances, transactions and historical-balances and also appllied filter on date
