# swagger.json
@@ -4,9 +4,11 @@
     "title": "Balances and Transactions API",
     "description": "This API provides endpoints to get the current balance and a list of transactions.",
     "version": "1.0.0",
-    "servers": {
-      "url": "https://uh4goxppjc7stkg24d6fdma4t40wxtly.lambda-url.eu-central-1.on.aws"
-    }
+    "servers": [
+      {
+        "url": "https://uh4goxppjc7stkg24d6fdma4t40wxtly.lambda-url.eu-central-1.on.aws"
+      }
+    ]
   },
   "paths": {
     "/balances": {
@@ -30,9 +32,7 @@
                     },
                     "currency": {
                       "type": "string",
-                      "enum": [
-                        "EUR"
-                      ]
+                      "enum": ["EUR"]
                     },
                     "date": {
                       "type": "string",
@@ -72,9 +72,7 @@
                           },
                           "currency": {
                             "type": "string",
-                            "enum": [
-                              "EUR"
-                            ]
+                            "enum": ["EUR"]
                           },
                           "date": {
                             "type": "string",
@@ -82,13 +80,71 @@
                           },
                           "status": {
                             "type": "string",
-                            "enum": [
-                              "BOOKED",
-                              "PROCESSED",
-                              "CANCELLED"
-                            ]
+                            "enum": ["BOOKED", "PROCESSED", "CANCELLED"]
                           }
                         }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/historical-balances": {
+      "get": {
+        "security": [
+          {
+            "xApiKey": []
+          }
+        ],
+        "description": "Get a list of balances.",
+        "parameters": [
+          {
+            "name": "from",
+            "in": "query",
+            "description": "Start date in DD-MM-YYYY format",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "format": "date",
+              "pattern": "^[0-3][0-9]-[0-1][0-9]-[0-9]{4}$"
+            }
+          },
+          {
+            "name": "to",
+            "in": "query",
+            "description": "End date in DD-MM-YYYY format",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "format": "date",
+              "pattern": "^[0-3][0-9]-[0-1][0-9]-[0-9]{4}$"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "amount": {
+                        "type": "number"
+                      },
+                      "currency": {
+                        "type": "string",
+                        "enum": ["EUR"]
+                      },
+                      "date": {
+                        "type": "string",
+                        "format": "date-time"
                       }
                     }
                   }
